fix namespacing

--- a/frontend/style/tournament_tree.scss
+++ b/frontend/style/tournament_tree.scss
@@ -8,7 +8,7 @@ $white: rgba(#fafafa, 0.5);
   box-sizing: border-box;
 }
 
-.rcv-tournament-tree-gfx {
+.module-tournament-tree-gfx {
   width: 1920px;
   height: 1080px;
   overflow: hidden;
